<resources>

    <string name="screen_login">Login</string>
    <string name="screen_registration">Sign Up</string>
    <string name="screen_forgot_password">Forgot Password</string>

    <string name="str_name">Full Name</string>
    <string name="str_email_address">Email Address</string>
    <string name="str_code">Country</string>
    <string name="str_mobile_number">Mobile Number</string>
    <string name="str_password">Password</string>
    <string name="str_confirm_password">Confirm Password</string>

    <string name="str_forgot_password">Forgot Password?</string>
    <string name="str_don_t_have_an_account">Don\'t have an account? SIGN UP</string>

    <string name="str_submit">SUBMIT</string>
    <string name="str_sign_in">Sign in</string>
    <string name="str_sign_up">SIGN UP</string>

    <string name="str_terms_and_condition_privacy_policy"><![CDATA[By clicking Sign Up, you agree to our Terms & Condition and that you have read our Privacy Policy.]]></string>
    <string name="str_terms_and_condition"><![CDATA[Terms & Condition]]></string>
    <string name="str_privacy_policy"><![CDATA[Privacy Policy]]></string>

    <string name="str_password_hint">Password must be 8–20 characters, alphanumeric and contains one special character which should not be first character</string>

    <string name="err_please_enter_full_name">Please enter full name.</string>
    <string name="err_please_enter_email_address">Please enter email address.</string>
    <string name="err_please_enter_valid_email_address">Please enter valid email address.</string>
    <string name="err_please_enter_mobile_number">Please enter mobile number.</string>
    <string name="err_please_enter_valid_mobile_number">Please enter valid mobile number.</string>
    <string name="err_please_enter_password">Please enter password.</string>
    <string name="err_please_enter_valid_password">Please enter valid password.</string>
    <string name="err_please_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_password_and_confirm_password_not_match" translatable="false">Confirm password not match.</string>

</resources>
