<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <include
        android:id="@+id/layoutHeader"
        layout="@layout/layout_registration_header" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/layoutHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            style="@style/textInputLayout"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_0"
            app:boxCornerRadiusBottomStart="@dimen/dimen_0"
            app:boxCornerRadiusTopEnd="@dimen/dimen_0"
            app:boxCornerRadiusTopStart="@dimen/dimen_0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:hint="@string/str_email_address"
                android:inputType="textEmailAddress"
                style="@style/textInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            style="@style/textInputLayout"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_0"
            app:boxCornerRadiusBottomStart="@dimen/dimen_0"
            app:boxCornerRadiusTopEnd="@dimen/dimen_0"
            app:boxCornerRadiusTopStart="@dimen/dimen_0"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                style="@style/textInputEditText"
                android:hint="@string/str_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_16sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/str_forgot_password" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSubmit"
            style="@style/buttonStyle"
            android:text="@string/str_sign_in" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="@dimen/dimen_8"
        android:text="@string/str_don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_16sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>

