<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <include
        android:id="@+id/layoutHeader"
        layout="@layout/layout_registration_header" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_30sdp"
                android:contentDescription="@null"
                android:src="@mipmap/ic_launcher" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputName"
                style="@style/textInputLayout"
                app:boxCornerRadiusBottomEnd="@dimen/dimen_0"
                app:boxCornerRadiusBottomStart="@dimen/dimen_0"
                app:boxCornerRadiusTopEnd="@dimen/dimen_0"
                app:boxCornerRadiusTopStart="@dimen/dimen_0">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editName"
                    style="@style/textInputEditText"
                    android:hint="@string/str_name"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmail"
                style="@style/textInputLayout"
                app:boxCornerRadiusBottomEnd="@dimen/dimen_0"
                app:boxCornerRadiusBottomStart="@dimen/dimen_0"
                app:boxCornerRadiusTopEnd="@dimen/dimen_0"
                app:boxCornerRadiusTopStart="@dimen/dimen_0">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEmail"
                    style="@style/textInputEditText"
                    android:hint="@string/str_email_address"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputCountryCode"
                    style="@style/textInputLayout"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_0"
                    app:boxCornerRadiusBottomEnd="@dimen/dimen_0"
                    app:boxCornerRadiusBottomStart="@dimen/dimen_0"
                    app:boxCornerRadiusTopEnd="@dimen/dimen_0"
                    app:boxCornerRadiusTopStart="@dimen/dimen_0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editCountryCode"
                        style="@style/textInputEditText"
                        android:digits="+0123456789"
                        android:ems="6"
                        android:hint="@string/str_code"
                        android:focusable="false"
                        android:enabled="false"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputMobileNumber"
                    style="@style/textInputLayout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    app:boxCornerRadiusBottomEnd="@dimen/dimen_0"
                    app:boxCornerRadiusBottomStart="@dimen/dimen_0"
                    app:boxCornerRadiusTopEnd="@dimen/dimen_0"
                    app:boxCornerRadiusTopStart="@dimen/dimen_0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editMobileNumber"
                        style="@style/textInputEditText"
                        android:digits="0123456789"
                        android:hint="@string/str_mobile_number"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="15"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                style="@style/textInputLayout"
                app:boxCornerRadiusBottomEnd="@dimen/dimen_0"
                app:boxCornerRadiusBottomStart="@dimen/dimen_0"
                app:boxCornerRadiusTopEnd="@dimen/dimen_0"
                app:boxCornerRadiusTopStart="@dimen/dimen_0"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPassword"
                    style="@style/textInputEditText"
                    android:hint="@string/str_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textPasswordHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:textSize="@dimen/_10ssp"
                android:text="@string/str_password_hint"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputConfirmPassword"
                style="@style/textInputLayout"
                app:boxCornerRadiusBottomEnd="@dimen/dimen_0"
                app:boxCornerRadiusBottomStart="@dimen/dimen_0"
                app:boxCornerRadiusTopEnd="@dimen/dimen_0"
                app:boxCornerRadiusTopStart="@dimen/dimen_0"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editConfirmPassword"
                    style="@style/textInputEditText"
                    android:hint="@string/str_confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textTermsCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_terms_and_condition_privacy_policy"
                android:layout_margin="@dimen/_8sdp"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_10ssp"
                android:lineSpacingMultiplier="1.3"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSubmit"
                style="@style/buttonStyle"
                android:text="@string/str_sign_up" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>